--- a/src/App.scss
+++ b/src/App.scss
@@ -1,53 +1,9 @@
-// Variables
-$color-primary: #2a2a2a;
-$color-secondary: #757575;
-$font-stack: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
 body {
-  font-family: $font-stack;
-  color: $color-primary;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
-header {
-  background: $color-primary;
-  color: white;
-  padding: 1rem 0;
-  text-align: center;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline;
-  margin: 0 15px;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-  &:hover {
-    text-decoration: underline;
+    background-color: #f0f0f0;
   }
-}
-
-section {
-  padding: 20px;
-  margin: 0 15px;
-}
-
-footer {
-  background: $color-primary;
-  color: white;
-  text-align: center;
-  padding: 1rem 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
+  
+  h1 {
+    color: darkblue;
+    text-align: center;
+  }
+  
